; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_cvcompiler.c_CgWriteOneAmlComment.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_cvcompiler.c_CgWriteOneAmlComment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AML_COMMENT_OP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CgWriteOneAmlComment(i32* %0, i8* %1, i8 signext %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8 %2, i8* %6, align 1
  %9 = load i8, i8* %6, align 1
  store i8 %9, i8* %7, align 1
  %10 = load i32, i32* @AML_COMMENT_OP, align 4
  %11 = trunc i32 %10 to i8
  store i8 %11, i8* %8, align 1
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  br label %26

15:                                               ; preds = %3
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @CgLocalWriteAmlData(i32* %16, i8* %8, i32 1)
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @CgLocalWriteAmlData(i32* %18, i8* %7, i32 1)
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @strlen(i8* %22)
  %24 = add nsw i32 %23, 1
  %25 = call i32 @CgLocalWriteAmlData(i32* %20, i8* %21, i32 %24)
  br label %26

26:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @CgLocalWriteAmlData(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
